<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.aperezs.adambiko.operations.modify.ModifyEntryViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/modify_banner_height"
                android:scaleType="centerCrop"
                android:src="@drawable/map_mock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/first_value"
                android:theme="@style/Modify.Textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator" />

            <com.aperezs.adambiko.utils.text.PrefixEditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="32dp"
                android:tag="$"
                android:theme="@style/Modify.EditText"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/amount"
                android:theme="@style/Modify.Textview"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/Modify.EditText"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:theme="@style/Modify.Textview"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:theme="@style/Modify.MultiLine.EditText"
                app:layout_constraintEnd_toEndOf="@+id/editText3"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/second_value"
                android:theme="@style/Modify.Textview"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <com.aperezs.adambiko.utils.text.SuffixEditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="%"
                android:theme="@style/Modify.EditText"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="@+id/textView5" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/third_value"
                android:theme="@style/Modify.Textview"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/editText5" />

            <com.aperezs.adambiko.utils.text.SuffixEditText
                android:id="@+id/editText6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="%"
                android:theme="@style/Modify.EditText"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/editText5"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="qwdw"
                android:theme="@style/Modify.Textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>